user-interface/frontend/themes/datamanager/components/all.css
/* ... */
.input-field-text {
  font-size: var(--lumo-font-size-m);
  line-height: var(--lumo-line-height-s);
  font-weight: var(--font-weight-medium);
}

.list-item-text {
  font-size: var(--lumo-font-size-m);
  line-height: var(--spacing-07);
  font-weight: var(--font-weight-regular);
}

.button-text {
  font-size: var(--lumo-font-size-m);
  line-height: var(--lumo-line-height-xs);
  font-weight: var(--font-weight-medium);
}

.button-text-primary {
  font-size: var(--lumo-font-size-m);
  line-height: var(--lumo-line-height-xs);
  font-weight: var(--font-weight-semi-bold);
}

.text-margin-bottom-03 {
  margin-bottom: var(--spacing-03);
}

.text-margin-bottom-04 {
  margin-bottom: var(--spacing-04);
}


/***************************
Font classes that provide more flexibility
***************************/

.text-size-s {
  font-size: var(--lumo-font-size-s);
}

.text-size-m {
  font-size: var(--lumo-font-size-m);
}

.text-contrast-70pct {
  color: var(--lumo-contrast-70pct)
}

.text-contrast-90pct {
  color: var(--lumo-contrast-70pct)
}

.text-line-height-s {
  line-height: var(--lumo-line-height-s);
}

.text-line-height-m {
  line-height: var(--lumo-line-height-m);
}

.text-bold {
  font-weight: bold;
}


/***************************
Padding & gaps
***************************/

.padding-left-right-02 {
  padding-left: var(--spacing-02);
  padding-right: var(--spacing-02);
}

.padding-left-right-03 {
  padding-left: var(--spacing-03);
  padding-right: var(--spacing-03);
}

.padding-left-right-04 {
  padding-left: var(--spacing-04);
  padding-right: var(--spacing-04);
}

.padding-left-right-05 {
  padding-left: var(--spacing-05);
  padding-right: var(--spacing-05);
}

.padding-left-right-06 {
  padding-left: var(--spacing-06);
  padding-right: var(--spacing-06);
}

.padding-left-right-07 {
  padding-left: var(--spacing-07);
  padding-right: var(--spacing-07);
}

.padding-left-right-10 {
  padding-left: var(--spacing-10);
  padding-right: var(--spacing-10);
}

.padding-top-03 {
  padding-top: var(--spacing-03);
}

.padding-top-04 {
  padding-top: var(--spacing-04);
}

.padding-top-05 {
  padding-top: var(--spacing-05);
}

.padding-bottom-02 {
  padding-bottom: var(--spacing-02);
}

.padding-top-bottom-02 {
  padding-top: var(--spacing-02);
  padding-bottom: var(--spacing-02);
}

.padding-top-bottom-04 {
  padding-top: var(--spacing-04);
  padding-bottom: var(--spacing-04);
}

.padding-top-bottom-05 {
  padding-top: var(--spacing-05);
  padding-bottom: var(--spacing-05);
}

.padding-top-bottom-06 {
  padding-top: var(--spacing-06);
  padding-bottom: var(--spacing-06);
}

.padding-top-bottom-07 {
  padding-top: var(--spacing-07);
  padding-bottom: var(--spacing-07);
}

.padding-top-bottom-10 {
  padding-top: var(--spacing-10);
  padding-bottom: var(--spacing-10);
}

.gap-02 {
  gap: var(--spacing-02);
}

.gap-03 {
  gap: var(--spacing-03);
}

.gap-04 {
  gap: var(--spacing-04);
}

.gap-05 {
  gap: var(--spacing-05);
}

.gap-06 {
  gap: var(--spacing-06);
}

.gap-07 {
  gap: var(--spacing-07);
}

/***************************
Colors
***************************/
.color-primary {
  color: var(--lumo-primary-text-color)
}

.color-secondary {
  color: var(--lumo-secondary-text-color)
}

.color-tertiary {
  color: var(--lumo-tertiary-text-color)
}

/***************************
Behaviour
***************************/

.clickable {
  cursor: pointer;
}


/***************************
Dialogs
***************************/

/*
Sections
 */
.dialog-section {
  display: flex;
  flex-direction: column;
}

/*
Dialog flavours
 */
.dialog-app {
}

.dialog-app,
.button-text,
.button-text-primary {
  margin: 0;
}

.dialog-small {
}

.dialog-medium {
}

.dialog-large {
}

.dialog-small::part(overlay) {
  width: var(--dialog-width-small);
  max-width: var(--dialog-width-max-small);
  height: var(--dialog-height-small);
  max-height: var(--dialog-height-max-small);
}

.dialog-medium::part(overlay) {
  width: var(--dialog-width-medium);
  max-width: var(--dialog-width-max-medium);
  height: var(--dialog-height-medium);
  max-height: var(--dialog-height-max-medium);
}

.dialog-large::part(overlay) {
  width: var(--dialog-width-large);
  max-width: var(--dialog-width-max-large);
  height: var(--dialog-height-large);
  max-height: var(--dialog-height-max-large);
}

.dialog-app::part(header) {
  padding: 0;
  border-bottom-style: solid;
  border-bottom-color: rgba(26, 56, 96, 0.1);
  border-bottom-width: 1px;
}

.dialog-app::part(content) {
  padding: 0;
}

.dialog-app::part(footer) {
  padding: 0;
  background-color: white;
  border-top-style: solid;
  border-top-color: rgba(26, 56, 96, 0.1);
  border-top-width: 1px;
}

.dialog-header-text-color {
  color: var(--lumo-header-text-color);
}

.dialog-step-name-text {
  font-size: var(--lumo-font-size-m);
  font-weight: var(--font-weight-medium);
  line-height: var(--lumo-line-height-xs);
}

.dialog-step-icon-arrow {
  font-size: 12px;
}

.footer {
  justify-content: flex-end;
}

.footer-intermediate {
  justify-content: space-between;
  width: 100%;
}

.full-width {
  width: 100%;
}

.full-height {
  height: 100%;
}

.border-bottom-solid {
  border-bottom-style: solid;
  border-bottom-color: rgba(26, 56, 96, 0.1);
  border-bottom-width: 1px;
}

/***************************
Buttons
 **************************/

.button-color-primary {
  color: var(--lumo-primary-contrast-color);
  background-color: var(--lumo-primary-color);
}

/***************************
Icons
****************************/

.icon-color-warning {
  color: var(--icon-color-warning)
}

.icon-size-xs {
  height: var(--icon-size-xs);
  width: var(--icon-size-xs);
}

.icon-size-s {
  height: var(--icon-size-s);
  width: var(--icon-size-s);
}

.icon-size-m {
  height: var(--icon-size-m);
  width: var(--icon-size-m);
}

.icon-size-l {
  height: var(--icon-size-l);
  width: var(--icon-size-l);
}

.round {
  border-radius: 50%;
}

.icon-background-color-default {
  background-color: var(--icon-color-default);
}
/* ... */

